--- a/package.json
+++ b/package.json
@@ -14,16 +14,24 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@liveblocks/client": "^1.10.4",
+    "@liveblocks/core": "^1.11.0",
     "@liveblocks/node": "^1.10.4",
     "@liveblocks/react": "^1.10.4",
+    "@liveblocks/yjs": "^1.11.0",
+    "@tiptap/extension-collaboration": "^2.2.4",
+    "@tiptap/extension-collaboration-cursor": "^2.2.4",
+    "@tiptap/extension-placeholder": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "mongodb": "^6.5.0",
-    "next": "14.1.3",
+    "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.2",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "yjs": "^13.6.14"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
