finally some relief

--- a/package.json
+++ b/package.json
@@ -9,37 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^2.5.0",
+    "@auth/mongodb-adapter": "^2.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@liveblocks/client": "^1.10.4",
-    "@liveblocks/core": "^1.11.0",
-    "@liveblocks/node": "^1.10.4",
-    "@liveblocks/react": "^1.10.4",
-    "@liveblocks/yjs": "^1.11.0",
-    "@tiptap/extension-collaboration": "^2.2.4",
-    "@tiptap/extension-collaboration-cursor": "^2.2.4",
-    "@tiptap/extension-placeholder": "^2.2.4",
-    "@tiptap/react": "^2.2.4",
-    "@tiptap/starter-kit": "^2.2.4",
-    "mongodb": "^6.5.0",
+    "@liveblocks/client": "^1.11.0",
+    "@liveblocks/node": "^1.11.0",
+    "@liveblocks/react": "^1.11.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-sortablejs": "^6.1.4",
-    "sortablejs": "^1.15.2",
-    "uniqid": "^5.4.0",
-    "yjs": "^13.6.14"
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/sortablejs": "^1.15.8",
-    "@types/uniqid": "^5.3.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
