--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@liveblocks/client": "^1.11.0",
     "@liveblocks/node": "^1.11.0",
     "@liveblocks/react": "^1.11.0",
+    "@liveblocks/react-comments": "^1.11.0",
     "@liveblocks/yjs": "^1.11.0",
     "@tiptap/extension-collaboration": "^2.2.4",
     "@tiptap/extension-collaboration-cursor": "^2.2.4",
     "@tiptap/extension-placeholder": "^2.2.4",
+    "@tiptap/extension-underline": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "@types/uniqid": "^5.3.4",
+    "mongoose": "^8.2.4",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
